Fixed Related Posts size so that accordions would be visible
git-svn-id: https://plugins.svn.wordpress.org/artistography/trunk@1083397 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,12 @@ label, input { display:block; }
 input.text { margin-bottom:12px; width:95%; padding: .4em; }
 fieldset { padding:0; border:0; margin-top:25px; }
 h1 { font-size: 1.2em; margin: .6em 0; }
-div#artists-contain { width: 350px; margin: 20px 0; }
-div#artists-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
-div#artists-contain table td, div#artists-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
+div#artists-contain { width: 350px; margin: 20px 0; height: 330px; overflow: auto;}
+div#artists-contain table { margin: 1em 0; border-collapse: collapse; width: 100%;  height: 330px; overflow: auto;}
+div#artists-contain table td, div#artists-contain table th { border: 1px solid; padding: .6em 10px; text-align: left; height: 330px; overflow: auto; }
+.ui-accordion-content {
+    height:330px;
+}
 .ui-dialog .ui-state-error { padding: .3em; }
 .validateTips { border: 1px solid transparent; padding: 0.3em; }
 
